<resources>
    <string name="app_name">julyAcademy2</string>
    <string name="july_academy">July Academy</string>
    <string name="login">Login</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="don_t_hava_an_account_sign_up">Don\'t hava an account ? Sign Up</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="welcome_to_our_restaurant_app">Welcome to our Restaurant App</string>
    <string name="which_kind_of_burger_you_need">Which kind of burger you need ?</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="which_extras_you_want_to_add">Which Extras you want to add?</string>
    <string name="cheese">Cheese</string>
    <string name="salad">Salad</string>
    <string name="onion_rings">Onion Rings</string>
    <string name="order">Order</string>
    <string name="order_here">Order Here</string>
    <string name="add_a_todo">Add a Todo...</string>
    <string name="add">Add</string>
    <string name="item_todo">Item Todo</string>
    <string name="calculator_app">Calculator App</string>
    <string name="restaurant_app">Restaurant App</string>
    <string name="todolist_app">TodoList App</string>
    <string name="navigationdrawer_app">NavigationDrawer App</string>
    <string name="kotlin_coroutines_app">Kotlin Coroutines App</string>
    <string name="shoppingitem_app">ShoppingItem App</string>
    <string name="todolist_api_app">Todolist Api App</string>
    <string name="firebase_backend_app">Firebase Backend App</string>
    <string name="unit_testing_app">Unit Testing App</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_email">Sent Email</string>
    <string name="drafts">Drafts</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="log_out">Log out</string>
    <string name="notification_app">Notification App</string>
    <string name="broadcast_receiver_app">BroadCast Receiver App</string>
    <string name="show_notification">Show Notification</string>
    <string name="old_first_name">Old First Name</string>
    <string name="old_last_name">Old Last Name</string>
    <string name="new_first_name">New First Name</string>
    <string name="new_last_name">New Last Name</string>
    <string name="old_age">Old Age</string>
    <string name="new_age">New Age</string>
    <string name="save">Save</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="retrieved_data_from_firebase_firestore">Retrieved data from Firebase Firestore</string>
    <string name="firebase_storage_app">Firebase Storage App</string>
    <string name="dowload">Dowload</string>
    <string name="upload">Upload</string>
</resources>