<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.MainActivity">

        <Button
            android:id="@+id/btnCalculatorApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calculator_app" />

        <Button
            android:id="@+id/btnRestaurantApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/restaurant_app" />

        <Button
            android:id="@+id/btnTodolistApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/todolist_app" />

        <Button
            android:id="@+id/btnNavigationDrawerApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/navigationdrawer_app" />

        <Button
            android:id="@+id/btnNotificationApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/notification_app" />

        <Button
            android:id="@+id/btnBroadCastReceiver"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/broadcast_receiver_app" />

        <Button
            android:id="@+id/btnKotlinCoroutineApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/kotlin_coroutines_app" />

        <Button
            android:id="@+id/btnShoppingItemApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/shoppingitem_app" />

        <Button
            android:id="@+id/btnTodolistApiApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/todolist_api_app" />

        <Button
            android:id="@+id/btnFirebaseApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/firebase_backend_app" />

        <Button
            android:id="@+id/btnUnitTestingApp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/unit_testing_app" />
    </LinearLayout>
</ScrollView>