<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".resturantapp.RestaurantActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_our_restaurant_app"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/which_kind_of_burger_you_need"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgMeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbBeef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beef" />

        <RadioButton
            android:id="@+id/rbChicken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chicken" />

        <RadioButton
            android:id="@+id/rbShrimp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shrimp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/which_extras_you_want_to_add"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/chkCheese"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cheese" />

        <CheckBox
            android:id="@+id/chkSalad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salad" />

        <CheckBox
            android:id="@+id/chkOnionRings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/onion_rings" />
    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/order"
        android:layout_marginTop="50dp"
        android:id="@+id/btnOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_here"
        android:id="@+id/tvTotalOrder"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="40dp"/>
</LinearLayout>